fixed pretty search bar on mobile

--- a/src/component/Navbar/Searchbar/Searchbar.css
+++ b/src/component/Navbar/Searchbar/Searchbar.css
@@ -51,3 +51,12 @@ input {
 .search-results li:hover {
     background-color: var(--blue);
 }
+
+@media (max-width: 600px) {
+  .search-bar {
+    padding: 0 0rem;
+  }
+  .search-bar input {
+    width: 50vw;
+  }
+}
